# gb_emulator

./: .gitignore  CMakeLists.txt  README.md  build.sh  constants.h  cpu.c  cpu.h  gdb.sh  leak.sh  main.c  memory.c  memory.h  perm_run.sh  run.sh  tests.c  tests.h  timer.c  timer.h  window.c  window.h
.cache/clangd/index/: constants.h.B17C907FD9C52F38.idx  cpu.c.22A0B51B6D0D0ED1.idx  cpu.c.C4AD3548A9B640B0.idx  cpu.h.3BC7671149500660.idx  cpu.h.ED2C50940B54F13A.idx  main.c.43540ED2182ACB93.idx  main.c.E546F142E040FA7B.idx  memory.h.1D400F0B1CB52F27.idx  tests.c.057CC7B31B53A999.idx  tests.c.58488EFEF4EBB402.idx  tests.h.1D64C9CAEE11E6F2.idx  tests.h.FCB5E4BD2BDB8496.idx
asm/: build.sh  test_program.asm  test_program.gb
